@@ -51,6 +51,7 @@ default=yes
 	logo="misc/logo.png"
 	icon="wesnoth-icon.png"
 	title_music="main_menu_new.ogg"
+	anonymous_music="main_menu_new.ogg"
 
 	buttons_x=760
 	buttons_y=330
